Revert to commit 23d07c0
Commit 23d07c0 (adjust for anticheat) by @not-coded